proyecto final version-3

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
           </h1>
           <h4>Marvel Merchandise</h4>
           <div class="btn-container">
-            <button class="btn shop-btn" type="submit">shop</button>
-            <button class="btn add-to-cart-btn" type="submit">
-              add to card
-            </button>
+            <a href="./product-info.html" class="shop-link"
+              ><button class="btn shop-btn" type="submit">shop</button>
+            </a>
+            <a href="./products.html"
+              ><button class="btn add-to-cart-btn" type="submit">
+                add to card
+              </button></a
+            >
           </div>
         </div>
 
