--- a/product-info.html
+++ b/product-info.html
@@ -68,7 +68,9 @@
           <input type="number" class="quantity" min="0" max="20" />
         </form>
         <h5 class="subtotal-text">149.98</h5>
-        <button class="btn add-shopping-btn">add to card</button>
+        <a href="./products.html"
+          ><button class="btn add-shopping-btn">add to card</button></a
+        >
       </div>
       <div class="images-container">
         <img
