--- a/products.html
+++ b/products.html
@@ -35,8 +35,8 @@
               <div class="cart-product">
                 <div class="info-cart-product">
                   <span class="cantidad-producto-carrito">1</span>
-                  <p class="titulo-producto-carrito">Wolverine</p>
-                  <span class="precio-producto-carrito">$80</span>
+                  <p class="titulo-producto-carrito">wolverine</p>
+                  <span class="precio-producto-carrito">$20</span>
                 </div>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
